js/js.translator/testData/incremental/invalidation/inlineFunctionAsFunctionReference/lib1/l2.0.kt
inline fun foo(callableReference: () -> String = ::bar): String {
    return callableReference()
}
